[package]
name = "aspen"
version = "0.2.0"
edition = "2021"
license-file = "LICENSE"
description = """
Aspen, a VB6 tool for parsing and analyzing VB6 code, in the spirit of cargo check, cargo fmt, etc.
"""
repository = "https://github.com/scriptandcompile/aspen"
readme = "README.md"
keywords = ["vb6", "parser", "analyzer", "vb6parse"]
categories = ["development-tools", "parsing", "parser-implementations"]

[dependencies]
vb6parse = "0.3.0"
clap = {version = "4.5.18", features = ["cargo", "string"]}
walkdir = "2.5.0"
anyhow = "1.0.89"